# flask-htmx-test

./: .gitignore  Dockerfile  Makefile  app.py  database.db  docker-compose.yml  init_db.py  pyproject.toml  schema.sql
templates/: base.html  index.html
